/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "VideoResolutionEnum.proto";
import "VideoFPSEnum.proto";

message VideoConfig {
  required VideoResolution.Enum video_resolution = 1;
  required VideoFPS.Enum video_fps = 2;
  required uint32 margin_width = 3;
  required uint32 margin_height = 4;
  required uint32 dpi = 5;
  optional uint32 additional_depth = 6;
}
